--- a/app/src/main/res/layout/fragment_prescription.xml
+++ b/app/src/main/res/layout/fragment_prescription.xml
@@ -34,6 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            tools:text="Test text"
+            android:textSize="16sp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp" />
 
