--- a/app/src/main/res/layout/fragment_medicine_scan.xml
+++ b/app/src/main/res/layout/fragment_medicine_scan.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical"
         tools:ignore="UseCompoundDrawables">
 
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="250dp"
@@ -22,12 +23,26 @@
             android:background="#FFF4F4"
             android:contentDescription="@string/imageDesc" />
 
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/chooseImageBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="Choose Image" />
+
+        <EditText
+            android:id="@+id/et_query"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Ask your query"
+            android:textSize="18sp"
+            android:padding="16dp"
+            android:layout_marginHorizontal="25dp"
+            android:background="@drawable/rounded_border"
+            android:inputType="text"
+            android:focusable="false" />
+
 
         <TextView
             android:id="@+id/textView"
@@ -38,6 +53,15 @@
             android:textSize="16sp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp" />
+
+        <TextView
+            android:id="@+id/llm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
