--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,4 +12,7 @@
     <item
         android:id="@+id/nav_profile"
         android:title="Profile" />
+    <item
+        android:id="@+id/nav_scan_report"
+        android:title="scan Report" />
 </menu>
