--- a/app/src/main/res/layout/activity_scan_report.xml
+++ b/app/src/main/res/layout/activity_scan_report.xml
@@ -30,7 +30,7 @@
             android:text="Choose Image" />
 
         <TextView
-            android:id="@+id/prescriptionTextView"
+            android:id="@+id/reportTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
