--- a/app/src/main/res/layout/fragment_full_report.xml
+++ b/app/src/main/res/layout/fragment_full_report.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".full_report.views.FullReportFragment">
+    tools:context=".report.full_report.views.FullReportFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fullReportRV"
