--- a/app/src/main/res/layout/item_test_recommendation_card.xml
+++ b/app/src/main/res/layout/item_test_recommendation_card.xml
@@ -33,6 +33,7 @@
                 android:layout_height="0dp"
                 android:layout_margin="4dp"
                 android:gravity="center_vertical"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/guideline3"
                 app:layout_constraintEnd_toStartOf="@+id/guideline1"
                 app:layout_constraintStart_toEndOf="@+id/indicator"
