--- a/app/src/main/res/layout/item_test_recommendation_card.xml
+++ b/app/src/main/res/layout/item_test_recommendation_card.xml
@@ -64,6 +64,9 @@
                 android:layout_height="0dp"
                 android:layout_margin="4dp"
                 android:gravity="center_vertical"
+                android:textColor="#FF0000"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/valueUnit"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toEndOf="@+id/guideline1"
@@ -136,6 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/guideline3"
                 tools:text="SGOT/AST" />
