--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,20 +6,21 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center_vertical"
-    android:background="#A8A8A8">
+    android:background="@drawable/gradient_background">
 
     <ImageView
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="80dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:layout_gravity="center"
         android:contentDescription="Profile Image"
-        android:layout_gravity="center"/>
+        android:src="@drawable/medisense_logo" />
 
     <TextView
+        android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User Name"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:layout_marginTop="8dp"/>
 </LinearLayout>
