--- a/app/src/main/res/layout/fragment_medicine_scan.xml
+++ b/app/src/main/res/layout/fragment_medicine_scan.xml
@@ -50,9 +50,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             tools:text="Test text"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="24dp" />
+            android:layout_marginEnd="24dp"
+            android:textStyle="bold"
+            android:textColor="#3F51B5"  android:textColorHint="#757575" android:backgroundTint="#E8F5E9" />
 
         <TextView
             android:id="@+id/llm"
