--- a/app/src/main/res/layout/fragment_prescription.xml
+++ b/app/src/main/res/layout/fragment_prescription.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".MedicineScanFragment">
+    tools:context=".PrescriptionFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="270dp"
+            android:layout_height="270dp"
             android:layout_marginTop="12dp"
             android:background="#FFF4F4"
             android:contentDescription="@string/imageDesc" />
@@ -34,32 +34,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            tools:text="Test text"
-            android:textSize="16sp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="24dp" />
+            android:layout_marginEnd="24dp"
+            android:textSize="16sp"
+            tools:text="Test text" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="12dp"-->
-<!--            android:gravity="center"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <com.google.android.material.button.MaterialButton-->
-<!--                android:id="@+id/startTTS"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="24dp"-->
-<!--                android:backgroundTint="#128700"-->
-<!--                android:text="start speech" />-->
-
-<!--            <com.google.android.material.button.MaterialButton-->
-<!--                android:id="@+id/stopTTS"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:backgroundTint="#BA2A2A"-->
-<!--                android:text="stop speech" />-->
-<!--        </LinearLayout>-->
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
