--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -23,6 +23,10 @@
         android:title="My Reports" />
 
     <item
+        android:id = "@+id/nav_create_medicine_plan"
+        android:title="create Medicine Plan" />
+
+    <item
         android:id="@+id/nav_logout"
         android:title="Logout"
         android:titleCondensed="Logout"
