--- a/app/src/main/res/layout/row_medicine_plan.xml
+++ b/app/src/main/res/layout/row_medicine_plan.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
-                android:weightSum="3">
+                android:weightSum="2">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/inactiveBtn"
@@ -84,18 +84,19 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Inactive"
-                    android:textSize="18sp" />
+                    android:layout_marginHorizontal="8dp"
+                android:textSize="18sp" />
 
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/editBtn"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Edit"
-                    android:textSize="18sp" />
+<!--                <com.google.android.material.button.MaterialButton-->
+<!--                    android:id="@+id/editBtn"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="4dp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="Edit"-->
+<!--                    android:textSize="18sp" />-->
 
 
                 <com.google.android.material.button.MaterialButton
@@ -106,6 +107,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Delete"
+                    android:layout_marginHorizontal="12dp"
                     android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
