--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -31,6 +31,11 @@
         android:title="Medicine Plan" />
 
     <item
+        android:id="@+id/nav_medical_summary"
+        android:title="Medical Summary" />
+
+
+    <item
         android:id="@+id/nav_logout"
         android:title="Logout"
         android:titleCondensed="Logout"
